<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Add_General"
tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/generalTitle"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/repeatgeneral"
        android:layout_alignLeft="@+id/repeatgeneral"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/titlegeneral"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/dateGeneral"
        android:layout_width="86dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/dategeneral"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/dategeneralbutton"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="18sp" />

    <Button
        android:id="@+id/dategeneralbutton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dateGeneral"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:text="@string/dategeneralbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/timeGeneralButton"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/dategeneralbutton"
        android:layout_alignLeft="@+id/dategeneralbutton"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/timegeneralbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dategeneralbutton" />

    <TextView
        android:id="@+id/timegeneral"
        android:layout_width="89dp"
        android:layout_height="36dp"
        android:layout_below="@+id/dateGeneral"
        android:layout_alignBaseline="@+id/timeGeneralButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/hh_mm_general"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timeGeneralButton"
        app:layout_constraintTop_toBottomOf="@+id/dateGeneral"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/repeatgeneral"
        android:layout_width="124dp"
        android:layout_height="33dp"
        android:layout_below="@+id/timeGeneralButton"
        android:layout_alignStart="@+id/timeGeneralButton"
        android:layout_alignLeft="@+id/timeGeneralButton"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="48dp"
        android:text="@string/repeat_after_days_general"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeGeneralButton" />

    <EditText
        android:id="@+id/repeatdaysgeneral"
        android:layout_width="92dp"
        android:layout_height="0dp"
        android:layout_below="@+id/timegeneral"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_toEndOf="@+id/repeatgeneral"
        android:layout_toRightOf="@+id/repeatgeneral"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/repeatgeneral"
        app:layout_constraintTop_toBottomOf="@+id/timegeneral"
        tools:textSize="18sp" />

    <Button
        android:id="@+id/donegeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="376dp"
        android:text="@string/savegeneralbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="GENERAL"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="40dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:text="BACK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donegeneral" />

</android.support.constraint.ConstraintLayout>