<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Exercise">

    <Button
        android:id="@+id/setdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/exer_date"
        android:layout_alignEnd="@+id/ra"
        android:layout_alignRight="@+id/ra"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-18dp"
        android:layout_marginRight="-18dp"
        android:text="SET DATE"
        android:textSize="20sp"
        android:textStyle="bold"

        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exer_title" />

    <TextView
        android:id="@+id/exer_date"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/hello"
        android:textSize="20sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/setdate"
        app:layout_constraintTop_toBottomOf="@+id/exer_title" />

    <TextView
        android:id="@+id/Exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_alignStart="@+id/setdate"
        android:layout_alignLeft="@+id/setdate"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/exercise"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exer_title"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Exercise_title"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:ems="10"
        android:hint="@string/exercise_name"
        android:inputType="text"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_name" />

    <TextView
        android:id="@+id/e_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/setdate"
        android:layout_alignLeft="@+id/setdate"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:text="@string/set_exercise_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Exercise_title" />

    <Button
        android:id="@+id/setTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/exer_title"
        android:layout_alignLeft="@+id/exer_title"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="Set Time"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setdate" />

    <TextView
        android:id="@+id/TextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/exer_date"
        android:layout_alignLeft="@+id/exer_date"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/hh_mm"
        android:textSize="20sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toEndOf="@+id/setTime"
        app:layout_constraintTop_toBottomOf="@+id/exer_date" />

    <TextView
        android:id="@+id/ra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/exer_title"
        android:layout_alignLeft="@+id/exer_title"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/repeat_after"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setTime" />

    <EditText
        android:id="@+id/r_days"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:ems="10"
        android:hint="no.of"
        android:inputType="textPersonName|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toEndOf="@+id/ra"
        app:layout_constraintTop_toBottomOf="@+id/TextTime" />

    <TextView
        android:id="@+id/rdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ra"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@+id/TextTime"
        android:layout_toRightOf="@+id/TextTime"
        android:text="@string/days"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/r_days"
        app:layout_constraintTop_toBottomOf="@+id/TextTime" />

    <Button
        android:id="@+id/add_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="-188dp"
        android:layout_marginRight="-188dp"
        android:layout_toStartOf="@+id/Exercise_title"
        android:layout_toLeftOf="@+id/Exercise_title"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/add_exercise"
        android:layout_alignLeft="@+id/add_exercise"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:text="BACK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_exercise" />


</android.support.constraint.ConstraintLayout>