<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:scrollbarSize="20dp"
    android:scrollbars="horizontal"
    tools:context=".Add_Medicine"
    tools:scrollbarStyle="insideOverlay">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="56dp"
            android:layout_height="20dp"
            android:layout_marginStart="164dp"
            android:layout_marginLeft="164dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="164dp"
            android:layout_marginRight="164dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:ems="10"
            android:hint="@string/med_name"
            android:inputType="textPersonName"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="116dp"
            android:layout_marginLeft="116dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="115dp"
            android:layout_marginRight="115dp"
            android:text="Frequency(in days)"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time" />

        <EditText
            android:id="@+id/frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:ems="10"
            android:hint="@string/_0"
            android:inputType="textPersonName|number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="174dp"
            android:layout_marginLeft="174dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="173dp"
            android:layout_marginRight="173dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginLeft="172dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="172dp"
            android:layout_marginRight="172dp"
            android:text="@string/time"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <EditText
            android:id="@+id/date"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/day"
            android:inputType="date"
            app:layout_constraintEnd_toStartOf="@+id/datebut"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/time"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/ht"
            android:inputType="time"
            app:layout_constraintEnd_toStartOf="@+id/timebut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="148dp"
            android:layout_marginRight="148dp"
            android:layout_marginBottom="100dp"
            android:background="@android:color/darker_gray"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayfreq" />

        <ImageButton
            android:id="@+id/datebut"
            android:layout_width="51dp"
            android:layout_height="46dp"
            android:layout_marginTop="162dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/date" />




        <ImageButton
            android:id="@+id/timebut"
            android:layout_width="50dp"
            android:layout_height="46dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/datebut"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/time" />


        <ImageButton
            android:id="@+id/timebut2"
            android:layout_width="50dp"
            android:layout_height="46dp"
            android:layout_marginTop="169dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/timebut"
            app:srcCompat="@drawable/time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/Inter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginLeft="162dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="163dp"
            android:layout_marginRight="163dp"
            android:text="@string/interval"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frequency" />

        <EditText
            android:id="@+id/interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/ht"
            android:inputType="textPersonName|time"
            app:layout_constraintEnd_toStartOf="@+id/timebut2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Inter" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="96dp"
            android:layout_marginRight="96dp"
            android:text="Day Frequency"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interval" />

        <EditText
            android:id="@+id/dayfreq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="84dp"
            android:layout_marginRight="84dp"
            android:ems="10"
            android:hint="@string/_0"
            android:inputType="textPersonName|number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginLeft="148dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="151dp"
            android:layout_marginRight="151dp"
            android:layout_marginBottom="100dp"
            android:background="@android:color/darker_gray"
            android:text="@string/BACK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>